merge studio