@@ -1,18 +1,18 @@
 /*
- * Copyright (c) 2010-2025 Haifeng Li. All rights reserved.
+ * Copyright (c) 2010-2026 Haifeng Li. All rights reserved.
  *
- * Smile is free software: you can redistribute it and/or modify it
+ * SMILE is free software: you can redistribute it and/or modify it
  * under the terms of the GNU General Public License as published by
  * the Free Software Foundation, either version 3 of the License, or
  * (at your option) any later version.
  *
- * Smile is distributed in the hope that it will be useful, but
+ * SMILE is distributed in the hope that it will be useful, but
  * WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  * GNU General Public License for more details.
  *
  * You should have received a copy of the GNU General Public License
- * along with Smile. If not, see <https://www.gnu.org/licenses/>.
+ * along with SMILE. If not, see <https://www.gnu.org/licenses/>.
  */
 package smile.io;
 
@@ -21,7 +21,7 @@ import java.net.URI;
 import java.net.URISyntaxException;
 import java.nio.charset.Charset;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 
 /**
  * Static methods that return the InputStream/Reader of a file or URL.
@@ -64,17 +64,17 @@ public interface Input {
             String scheme = uri.getScheme();
             // If scheme is single character, assume it is the drive letter in Windows.
             if (scheme == null || scheme.length() < 2) {
-                return Files.newInputStream(Paths.get(path));
+                return Files.newInputStream(Path.of(path));
             }
 
             if ("file".equalsIgnoreCase(uri.getScheme())) {
-                return Files.newInputStream(Paths.get(uri.getPath()));
+                return Files.newInputStream(Path.of(uri.getPath()));
             }
 
             // http, ftp, ...
             return uri.toURL().openStream();
         } catch (URISyntaxException e) {
-            return Files.newInputStream(Paths.get(path));
+            return Files.newInputStream(Path.of(path));
         }
     }
 }
