@@ -1,25 +1,30 @@
 /*
- * Copyright (c) 2010-2025 Haifeng Li. All rights reserved.
+ * Copyright (c) 2010-2026 Haifeng Li. All rights reserved.
  *
- * Smile is free software: you can redistribute it and/or modify it
+ * SMILE is free software: you can redistribute it and/or modify it
  * under the terms of the GNU General Public License as published by
  * the Free Software Foundation, either version 3 of the License, or
  * (at your option) any later version.
  *
- * Smile is distributed in the hope that it will be useful, but
+ * SMILE is distributed in the hope that it will be useful, but
  * WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  * GNU General Public License for more details.
  *
  * You should have received a copy of the GNU General Public License
- * along with Smile. If not, see <https://www.gnu.org/licenses/>.
+ * along with SMILE. If not, see <https://www.gnu.org/licenses/>.
  */
 package smile.io;
 
 import java.io.BufferedReader;
 import java.io.File;
 import java.io.IOException;
-import java.nio.file.Path;
+import java.net.URISyntaxException;
+import java.nio.file.*;
+import java.util.Collections;
+import java.util.List;
+import java.util.Optional;
+import java.util.concurrent.CopyOnWriteArrayList;
 import java.util.stream.Stream;
 
 /**
@@ -29,7 +34,54 @@ import java.util.stream.Stream;
  */
 public interface Paths {
     /** Smile home directory. */
-    String home = System.getProperty("smile.home", "base/src/test/resources/");
+    final String home = System.getProperty("smile.home", "base/src/test/resources/");
+    /** Readonly file systems for resources. */
+    final List<FileSystem> resourceFileSystems = new CopyOnWriteArrayList<>();
+
+    /**
+     * Returns the file path of a resource.
+     * @param clazz the class to load the resource.
+     * @param path the resource path.
+     * @return the file path of the resource.
+     */
+    static Optional<Path> resource(Class<?> clazz, String path) {
+        var url = clazz.getResource(path);
+        if (url == null) {
+            return Optional.empty();
+        }
+
+        try {
+            var uri = url.toURI();
+            try {
+                return Optional.of(Path.of(uri));
+            } catch (FileSystemNotFoundException e) {
+                // This exception is expected if the filesystem for the JAR hasn't been created
+
+                // Initialize a ZipFileSystem and DO NOT try-resource.
+                // Otherwise, it will be closed for following file access.
+                var fileSystem = FileSystems.newFileSystem(uri, Collections.emptyMap());
+                resourceFileSystems.add(fileSystem);
+                return Optional.of(fileSystem.getPath(path));
+            }
+        } catch (URISyntaxException | IOException e) {
+            return Optional.empty();
+        }
+    }
+
+    /**
+     * Returns the file path of a resource.
+     * @param path the resource path.
+     * @return the file path of the resource.
+     */
+    static Optional<Path> resource(String path) {
+        for (var fs : resourceFileSystems) {
+            var p = fs.getPath(path);
+            if (Files.exists(p)) {
+                return Optional.of(p);
+            }
+        }
+        return Optional.empty();
+    }
 
     /**
      * Returns the file name without extension.
@@ -57,7 +109,7 @@ public interface Paths {
      * @return the file path to the test data.
      */
     static Path getTestData(String... path) {
-        return java.nio.file.Paths.get(home + File.separator + "data", path);
+        return Path.of(home + File.separator + "data", path);
     }
 
     /**
