@@ -1,23 +1,23 @@
 /*
- * Copyright (c) 2010-2024 Haifeng Li. All rights reserved.
+ * Copyright (c) 2010-2026 Haifeng Li. All rights reserved.
  *
- * Smile is free software: you can redistribute it and/or modify it
+ * SMILE is free software: you can redistribute it and/or modify it
  * under the terms of the GNU General Public License as published by
  * the Free Software Foundation, either version 3 of the License, or
  * (at your option) any later version.
  *
- * Smile is distributed in the hope that it will be useful, but
+ * SMILE is distributed in the hope that it will be useful, but
  * WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  * GNU General Public License for more details.
  *
  * You should have received a copy of the GNU General Public License
- * along with Smile. If not, see <https://www.gnu.org/licenses/>.
+ * along with SMILE. If not, see <https://www.gnu.org/licenses/>.
  */
 package smile.vision;
 
 import java.io.IOException;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import javax.imageio.ImageIO;
 import smile.deep.Loss;
 import smile.deep.Optimizer;
@@ -63,8 +63,8 @@ public class EfficientNetTest {
         model.to(device);
         model.eval();
 
-        var lenna = ImageIO.read(Paths.get("deep/src/test/resources/data/image/Lenna.png").toFile());
-        var panda = ImageIO.read(Paths.get("deep/src/test/resources/data/image/panda.jpg").toFile());
+        var lenna = ImageIO.read(Path.of("deep/src/test/resources/data/image/Lenna.png").toFile());
+        var panda = ImageIO.read(Path.of("deep/src/test/resources/data/image/panda.jpg").toFile());
 
         try (var guard = Tensor.noGradGuard()) {
             // https://discuss.pytorch.org/t/libtorchs-cpu-inference-is-much-slower-on-windows-than-on-linux/166194/2
